add button and text field

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 	<title>html site</title>
 	<link href="styles/main.css" rel="stylesheet" type="text/css" />
 </head>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="styles/azure.js"></script>
 <body>
-	<div id="buttons">
+	<!-- <div id="buttons">
 		<ul>
 			<li><a href="/">Home</a></li>
 			<li><a href="/about.html">About</a></li>
@@ -14,8 +16,11 @@
 	</div>
 
 	<h1>Home</h1>
-	<img src="images/yoda.jpg">
+	<img src="images/yoda.jpg"> -->
+	<img src="https://www.petmd.com/sites/default/files/what-does-it-mean-when-cat-wags-tail.jpg">
+	<button>Submit</button>
+	<p id="category">Category</p>
 
-	<script src="scripts/main.js" type="text/javascript"></script>
+	<!-- <script src="scripts/main.js" type="text/javascript"></script> -->
 </body>
 </html>
