--- a/index.html
+++ b/index.html
@@ -4,16 +4,11 @@
 	<meta charset="UTF-8">
 	<title>html site</title>
 	<link href="styles/main.css" rel="stylesheet" type="text/css" />
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 </head>
 <body>
-	<div id="buttons">
-		<ul>
-			<li><a href="/">Home</a></li>
-			<li><a href="/about.html">About</a></li>
-		</ul>
-	</div>
 
-	<h1>Home</h1>
+	<h1>What is this?</h1>
 	<img src="images/yoda.jpg">
 
 	<script src="scripts/main.js" type="text/javascript"></script>
