link ajax function to button

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 	<meta charset="UTF-8">
 	<title>html site</title>
 	<link href="styles/main.css" rel="stylesheet" type="text/css" />
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="scripts/azure.js"></script>
 </head>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="styles/azure.js"></script>
+
 <body>
 	<!-- <div id="buttons">
 		<ul>
