--- a/index.html
+++ b/index.html
@@ -11,17 +11,15 @@
 <script src="scripts/main.js"></script>
 
 <body>
-	<!-- <div id="buttons">
-		<ul>
-			<li><a href="/">Home</a></li>
-			<li><a href="/about.html">About</a></li>
-		</ul>
-	</div>
 
-	<h1>Home</h1>
-	<img src="images/yoda.jpg"> -->
-	<img id="myImage" src="https://www.petmd.com/sites/default/files/what-does-it-mean-when-cat-wags-tail.jpg"/>
-	<button onclick="processImage()">Submit</button>
+	<h1>What is this?</h1>
+	<h2>Please input your link below:</h2>
+	<form id="form" action="">
+		<input type="text" name="imgInput" id="imgInput"><br>
+		<input type="button" onclick="processImage()" value="Submit">
+	</form>
+
+	<img id="myImage" src=""/>
     <textarea id="myText" class="UIInput" style="width:580px; height:400px;"></textarea>
 
 	<!-- <script src="scripts/main.js" type="text/javascript"></script> -->
