--- a/index.html
+++ b/index.html
@@ -5,21 +5,11 @@
 	<title>html site</title>
 	<link href="styles/main.css" rel="stylesheet" type="text/css" />
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="scripts/main.js"></script>
 </head>
 <body>
-	<!-- <div id="buttons">
-		<ul>
-			<li><a href="/">Home</a></li>
-			<li><a href="/about.html">About</a></li>
-		</ul>
-	</div>
-
-	<h1>Home</h1>
-	<img src="images/yoda.jpg"> -->
 	<img id="myImage" src="https://www.petmd.com/sites/default/files/what-does-it-mean-when-cat-wags-tail.jpg"/>
 	<button onclick="processImage()">Submit</button>
     <textarea id="myText" class="UIInput" style="width:580px; height:400px;"></textarea>
-
-	<!-- <script src="scripts/main.js" type="text/javascript"></script> -->
 </body>
 </html>
