--- a/index.html
+++ b/index.html
@@ -10,17 +10,26 @@
 <script src="scripts/azure.js"></script>
 <script src="scripts/main.js"></script>
 
-<body>
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
 
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+
+<body>
+<div class="row">
 	<h1>What is this?</h1>
-	<h2>Please input your link below:</h2>
+	<h3>Please input your link below:</h3>
 	<form id="form" action="">
 		<input type="text" name="imgInput" id="imgInput"><br>
 		<input type="button" onclick="processImage()" value="Submit">
 	</form>
-
-	<img id="myImage" src=""/>
+    <div class="card-image">
+		<img id="myImage" src=""/>
+		<span class="card-title">Image</span>
+	</div>
     <textarea id="myText" class="UIInput" style="width:580px; height:400px;"></textarea>
+ </div>
 
 	<!-- <script src="scripts/main.js" type="text/javascript"></script> -->
 </body>
