--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<title>html site</title>
 		<link href="styles/main.css" rel="stylesheet" type="text/css" />
+		<link href="css/styles.css" rel="stylesheet" type="text/css" />
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script src="scripts/main.js"></script>
 		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -20,17 +21,17 @@
 
 	<body>
 		<div class="row">
-			<h1>What is this?</h1>
-			<h3>Please input your link below:</h3>
+			<h1 id="title">Scavenger</h1>
+			<h5>Please input your image link below:</h5>
 			<form id="form" action="">
 				<input type="text" name="imgInput" id="imgInput">
-				<input type="button" onclick="processImage()" value="Submit">
+				<input type="button" onclick="processImage()" value="Submit" class="myButton">
 			</form>
 		    <div class="card-image">
 				<img id="myImage" src=""/>
-				<span class="card-title">Image</span>
+				<p>This image is classified as:</p>
+				<textarea readonly id="myText"></textarea>
 			</div>
-		    <textarea id="myText" class="UIInput" style="width:580px; height:400px;"></textarea>
 		 </div>
 	</body>
 </html>
