--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 </head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="scripts/azure.js"></script>
 <script src="scripts/main.js"></script>
 
   <!-- Compiled and minified CSS -->
@@ -18,7 +17,23 @@
 
 <body>
 <div class="row">
-	<h1>What is this?</h1>
+	<h1>Scavenger Hunt</h1>
+	<h2>List to find</h2>
+    <table id = "categoryTable">
+        <thead>
+          <tr>
+              <th>item</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td id="item0"></td>
+          </tr>
+          <tr>
+            <td id="item1"></td>
+          </tr>
+        </tbody>
+      </table>
 	<h3>Please input your link below:</h3>
 	<form id="form" action="">
 		<input type="text" name="imgInput" id="imgInput"><br>
