--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 	<body>
 		<div class="row">
-			<h1 id="title">Scavenger</h1>
+			<h1 id="title">scavengyo</h1>
 			<h5>Please input your image link below:</h5>
 			<form id="form" action="">
 				<input type="text" name="imgInput" id="imgInput">
