--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- <<<<<<< HEAD -->
 	<head>
 		<meta charset="UTF-8">
 		<title>html site</title>
@@ -31,14 +30,8 @@
 						  <th>Scavenger list</th>
 					  </tr>
 					</thead>
-					<tbody>
-					  <tr>
-						<td id="item0"></td>
-					  </tr>
-					  <tr>
-						<td id="item1"></td>
-					  </tr>
-					</tbody>
+			        <tbody id="tableBody">
+			        </tbody>
 				</table>
 			</div>
 			<p>Please paste your image link below:</p>
